--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,6 @@
     },
     "require": {
         "vlucas/phpdotenv": "^2.2",
-        "consolidation/robo": "^1.0.0-rc1"
+        "consolidation/robo": "^1.1.0"
     }
 }
