Switching to assume that Behat will use headless Chrome instead of PhantomJS for tests. Therefore adding a depedency on the se/selenium-server-standalone script, and ensuring that chromedriver is present, as well as in the ./vendor/bin:/Users/ben/.composer/vendor/bin:/usr/local/bin:/usr/local/sbin:./vendor/bin:/Users/ben/.composer/vendor/bin:/usr/local/bin:/usr/local/sbin:/usr/local/bin:/usr/bin:/bin:/usr/sbin:/sbin, on both dev and CI environments.

--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
     },
     "require": {
         "vlucas/phpdotenv": "^2.2",
-        "consolidation/robo": "^1.1.0"
+        "consolidation/robo": "^1.1.0",
+        "se/selenium-server-standalone": "^3.9"
     }
 }
