Removing all the stuff related to selenium.

--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,6 @@
     },
     "require": {
         "vlucas/phpdotenv": "^2.2",
-        "consolidation/robo": "^1.1.0",
-        "se/selenium-server-standalone": "^3.9"
+        "consolidation/robo": "^1.1.0"
     }
 }
