--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
     },
     "require": {
         "vlucas/phpdotenv": "^2.2",
-        "consolidation/robo": "^1.3"
+        "consolidation/robo": "^1.3",
+        "drush/drush": "9.4.0"
     }
 }
