--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,6 @@
     "require": {
         "vlucas/phpdotenv": "^2.2",
         "consolidation/robo": "^1.3",
-        "drush/drush": "9.4.0"
+        "drush/drush": "^9.6"
     }
 }
