--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2
 jobs:
   build:
     docker:
-       - image: thinkshout/nginx-php-fpm:php72
+       - image: nnadeau/docker-doxygen
     working_directory: /var/www/html/robo-drupal
     steps:
       - checkout
