#43 - moving doc files from the html subdirectory of docs to docs (no subdirectory)

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,3 +11,5 @@ jobs:
           name: Generate documentation
           command: |
             doxygen robo-drupalDoxygenConfig
+            mv docs/html/* docs
+            rm -r docs/html
