--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,5 +11,10 @@ jobs:
           name: Generate documentation
           command: |
             doxygen robo-drupalDoxygenConfig
-            mv docs/html/* docs
-            rm -r docs/html
+            cd ..
+            git clone git@github.com:thinkshout/robo-drupal-docs.git
+            cd robo-drupal-docs
+            mv ../robo-drupal/docs/html/* .
+            git add .
+            git commit -m "doxygen docs update for robo-drupal"
+            git push
