--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2
 jobs:
   build:
     docker:
-       - image: alpine-docker/git
+       - image: alpine/git
     working_directory: /robo-drupal
     steps:
       - checkout
