--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,7 @@ jobs:
     working_directory: /robo-drupal
     steps:
       - checkout
-      - add_ssh_keys
+      - add_ssh_keys:
           fingerprints:
           - "82:35:ca:6b:5d:24:40:ab:00:8e:46:a9:51:37:2e:a3"
       - run:
