Got the wrong directory.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,6 +14,7 @@ jobs:
           command: |
             apk add doxygen graphviz
             doxygen robo-drupalDoxygenConfig
+            mv ../robo-drupal/docs/html/* .
             git config --global user.email "dev-team@thinkshout.com"
             git config --global user.name "Circle CI"
             git add .
