--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
           command: |
             apk add doxygen graphviz
             doxygen robo-drupalDoxygenConfig
-            mv docs/html/* new-docs
+            mv docs/html new-docs
             rm -r docs
             mv new-docs docs
             git config --global user.email "dev-team@thinkshout.com"
