--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
         }
     },
     "require": {
-        "vlucas/phpdotenv": ">2.2",
+        "vlucas/phpdotenv": ">=5.0",
         "consolidation/robo": "^1.3",
         "drush/drush": "^9.6|^10.0"
     }
