--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
     "require": {
         "vlucas/phpdotenv": ">=5.0",
         "consolidation/robo": "^1.3",
+        "drupal/config_split": "^2.0",
         "drush/drush": "^9.6|^10.0"
     }
 }
