--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,6 @@
         "vlucas/phpdotenv": ">=5.0",
         "consolidation/robo": "^1.3",
         "drupal/config_split": "^2.0",
-        "drush/drush": "^9.6|^10.0"
+        "drush/drush": "^9.6|^10.0|11.0"
     }
 }
