--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "vlucas/phpdotenv": ">=5.0",
         "consolidation/robo": "^3.0",
         "drupal/config_split": "^2.0",
-        "drush/drush": "^9.6|^10.0|^11.1"
+        "drush/drush": "^9.6|^10.0|^11.1",
+        "genesis/behat-fail-aid": "^3.7"
     }
 }
