--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
         "consolidation/robo": "^3.0 || ^4.0",
         "consolidation/annotated-command": "<=4.5.6",
         "drupal/config_split": "^2.0",
-        "drush/drush": "^9.6|^10.0|^11.1",
+        "drush/drush": "^9.6|^10.0|^11.1|^12.0",
         "genesis/behat-fail-aid": "^3.7"
     },
     "extra": {
